--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jquery": "^2.2.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "moment": "^2.18.1",
@@ -66,8 +67,7 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0",
-    "jquery": "^2.2.3"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
