--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
+    "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
     "axios": "^0.16.2",
     "babel-core": "^6.22.1",
@@ -54,6 +55,7 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
+    "prerender-spa-plugin": "^2.1.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
